feat: attempt to add restricted api